<resources>
    <string name="app_name">CadenaCustodiaPP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="PrincipalActivity"> Información de la Aplicación:\n\n
        Al pulsar el botón de "GUARDAR DATOS", La información que se ingresó en cada apartado  del Registro ya se guardó, puedes consultarla (no modificarla) en el apartado de Crear PDF, ubicado en el menú principal.\n\n
        Para modificar la información de cada apartado deberás llenar de nuevo todo el campo, revisa la información antes de pulsar "GUARDAR DATOS".\n\n
        El registro de Trazabilidad, no se puede generar desde la aplicación, ya que éste se debe hacer de forma manuscrita debido a las personas que participan en las etapas de la Cadena de Custodia. \n\n
    Para mayor información revisa nuestra política de privacidad.\n\n

    </string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string-array name="Tachar">
        <item>X</item>
        <item> </item>
    </string-array>

    <string-array name="Indicios">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>

    </string-array>

    <string-array name="Etapas">
        <item>Observación</item>
        <item>Identificación</item>
        <item>Documentación</item>
        <item>Recolección</item>
        <item>Embalaje</item>
        <item>Sellado</item>
        <item>Etiquetado</item>
        <item>Inventario y recomendaciones para su traslado</item>
        <item>Procesamiento</item>
    </string-array>

    <string name="datos_generales">DATOS GENERALES</string>
    <string name="n_mero_de_referencia">Número de Referencia</string>
    <string name="instituci_n">Institución</string>
    <string name="folio">Folio</string>
    <string name="lugar_de_intervenci_n">Lugar de Intervención</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="guardar_datos">GUARDAR DATOS</string>
    <string name="no_de_referencia">No. de referencia</string>
</resources>