<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.GeneralesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="317dp"
                android:layout_height="468dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="36dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="39dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/white"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/datos_generales"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/referencia"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/n_mero_de_referencia"
                        app:boxBackgroundMode="outline"

                        app:startIconDrawable="@drawable/ic_baseline_help_center_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/referenciaEt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/institucion"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/instituci_n"
                        app:boxBackgroundMode="outline"
                        app:startIconDrawable="@drawable/ic_baseline_help_center_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/institucionEt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/folio"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/folio"
                        app:boxBackgroundMode="outline"
                        app:startIconDrawable="@drawable/ic_baseline_help_center_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/folioEt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/lugInt"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lugar_de_intervenci_n"
                        app:boxBackgroundMode="outline"
                        app:counterEnabled="true"
                        app:counterMaxLength="250"
                        app:startIconDrawable="@drawable/ic_baseline_help_center_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lugIntEt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:maxLength="250"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fecha"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/fecha"
                        app:boxBackgroundMode="outline"
                        app:startIconDrawable="@drawable/baseline_calendar_month_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fechaEt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clickable="false"
                            android:inputType="date"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/hora"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hora"
                        app:boxBackgroundMode="outline"
                        app:startIconDrawable="@drawable/baseline_access_time_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/horaEt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clickable="false"
                            android:inputType="time"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="bottom"
                android:layout_marginStart="100dp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="90dp"
                android:layout_marginBottom="185dp"
                android:backgroundTint="@color/green"
                android:text="@string/guardar_datos"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>


    </ScrollView>


</RelativeLayout>